clang/test/BSC/Negative/NullabilityCheck/Nonnull_global_pointer_initialized/Nonnull_global_pointer_initialized.cbs
// RUN: %clang_cc1 -nullability-check=all -verify %s
int var = 1;
int *_Nonnull globalP1 = &var;
int *_Nonnull globalP2; // expected-error {{type contains nonnull pointer must be properly initialized}}
int *_Nonnull arr[1]={nullptr}; // expected-error {{type contains nonnull pointer must be properly initialized}}
int* _Nonnull p2 = nullptr; // expected-error {{nonnull pointer cannot be assigned by nullable pointer}}

struct T {
  int a;
  int* _Nonnull p;
};

// _Nonnull can't be zero init
struct T t2={0}; // expected-error {{type contains nonnull pointer must be properly initialized}}

struct S{
  int *_Nonnull p;
};

struct S2{
  struct S s1;
};

struct S s1;  // expected-error {{type contains nonnull pointer must be properly initialized}}
struct S2 s2; // expected-error {{type contains nonnull pointer must be properly initialized}}

int main() { 

    return 0; 
}